--- a/sip_pdb/templates/login/register.jinja
+++ b/sip_pdb/templates/login/register.jinja
@@ -12,11 +12,11 @@
 		  </div>
           <div class="mb-3">
 		    <label class="form-label">Nama Lengkap</label>
-		    <input type="text" name="nama" class="form-control" >
+		    <input type="text" name="name" class="form-control" >
 		  </div>
           <div class="mb-3">
 		    <label class="form-label">Asal Sekolah</label>
-		    <input type="text" name="asal_sekolah" class="form-control" >
+		    <input type="text" name="prev_school" class="form-control" >
 		  </div>
           <div class="mb-3">
 		    <label class="form-label">NISN</label>
@@ -24,18 +24,18 @@
 		  </div>
           <div class="mb-3">
 		    <label class="form-label">Nomor Telepon</label>
-		    <input type="text" name="no_hp" class="form-control" >
+		    <input type="text" name="cp" class="form-control" >
 		  </div>
           <div class="mb-3">
 		    <label class="form-label">Jenis Kelamin</label>
             <div class="form-check">
-            <input class="form-check-input" type="radio" name="jenis_kelamin" value="L" id="radio_l">
+            <input class="form-check-input" type="radio" name="gender" value="L" id="radio_l">
             <label class="form-check-label" for="radio_l">
                 Laki-laki
             </label>
             </div>
             <div class="form-check">
-            <input class="form-check-input" type="radio" name="jenis_kelamin" value="P" id="radio_p">
+            <input class="form-check-input" type="radio" name="gender" value="P" id="radio_p">
             <label class="form-check-label" for="radio_p">
                 Perempuan
             </label>
@@ -43,7 +43,7 @@
 		  </div>
           <div class="mb-3">
             <label class="form-label">Jalur Seleksi Pendaftaran</label>
-            <select class="form-select" name="jalur_seleksi">
+            <select class="form-select" name="selection_path">
                 <option value="Jalur Reguler">Jalur Reguler</option>
                 <option value="Jalur Beasiswa Dhuafa">Jalur Beasiswa Dhuafa</option>
                 <option value="Jalur Beasiswa Prestasi Nasional">Jalur Beasiswa Prestasi Nasional</option>
@@ -65,7 +65,7 @@
 		  </div>
           <div class="mb-3">
 		    <label class="form-label">Konfirmasi Password</label>
-		    <input type="password" name="konfirm_password" class="form-control">
+		    <input type="password" name="confirm_password" class="form-control">
 		  </div>
           <div class="mb-3">
             <label class="form-label">Gambar Captcha: </label>
