tambah captcha dan migrasi login ke wtform

--- a/sip_pdb/templates/login/register.jinja
+++ b/sip_pdb/templates/login/register.jinja
@@ -34,7 +34,7 @@
         {{ render_field(form.confirm_password) }}
         <div class="mb-3">
         <label class="form-label">Gambar Captcha: </label>
-        <!-- <img src="" id="capt_img" class="img-responsive" alt="captcha"> -->
+        <img src="{{ cap_img }}" id="capt_img" class="img-responsive" alt="captcha">
         </div>
         <div class="mb-3">
         <label class="form-label">Input Captcha</label>
