--- a/sip_pdb/templates/login/index.jinja
+++ b/sip_pdb/templates/login/index.jinja
@@ -5,15 +5,10 @@
 {% block content %}
 <div class="row">
 	<div class="col">
-		<form method="POST" action="{{ url_for('auth.login') }}">
-		  <div class="mb-3">
-		    <label class="form-label">Username</label>
-		    <input type="text" name="username" class="form-control" >
-		  </div>
-		  <div class="mb-3">
-		    <label lass="form-label">Password</label>
-		    <input type="password" name="password" class="form-control">
-		  </div>
+		<form method="POST" action="{{ url_for('auth.login') }}" hx-boost="false">
+		  {{ form.csrf_token }}
+		  {{ render_field(form.username) }}
+		  {{ render_field(form.password) }}
 		  <button type="submit" class="btn btn-primary">Submit</button>
 		</form>
 	</div>
