--- a/sip_pdb/templates/login/index.jinja
+++ b/sip_pdb/templates/login/index.jinja
@@ -2,6 +2,8 @@
 
 {% block title %}Login{% endblock %}
 
+{% from 'macros.jinja' import render_field %}
+
 {% block content %}
 <div class="row">
 	<div class="col">
