--- a/sip_pdb/templates/registrant/layout.jinja
+++ b/sip_pdb/templates/registrant/layout.jinja
@@ -48,20 +48,6 @@
 </head>
 <body hx-boost="true" hx-push-url="true">
 
-{% macro render_field(field) %}
-  <div class="mb-3">
-    {{ field.label(class_='form-label') }}
-    {{ field(class_='form-control' + (' is-invalid' if field.errors else ''), **kwargs)|safe }}
-    {% if field.errors %}
-      <div class="invalid-feedback">
-        {% for error in field.errors %}
-          {{ error }}
-        {% endfor %}
-      </div>
-    {% endif %}
-  </div>
-{% endmacro %}
-
 <nav class="navbar navbar-dark bg-dark p-3">
         <div class="d-flex col-12 col-md-3 col-lg-2 mb-2 mb-lg-0 flex-wrap flex-md-nowrap justify-content-between">
             <a class="navbar-brand" href="#">
@@ -77,9 +63,8 @@
                   Halo, {{ username }}
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <li><a class="dropdown-item" href="#">Settings</a></li>
-                  <li><a class="dropdown-item" href="#">Messages</a></li>
-                  <li><a class="dropdown-item" href="#">Sign out</a></li>
+                  <li><a class="dropdown-item" href="#">Ganti Password</a></li>
+                  <li><a class="dropdown-item" href="{{ url_for('auth.logout') }}">Sign out</a></li>
                 </ul>
               </div>
         </div>
@@ -130,8 +115,42 @@
                       </ul>
                 </div>
             </nav>
-            <main class="col-xl-10 col-lg-9 col-md-9 col-12 fix-padding" id="hx_content">
+            <main class="col-xl-10 col-lg-9 col-md-9 col-12 fix-padding">
+              {% if error %}
+              <div class="row">
+                <div class="col">
+                    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                      {{ error }}
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                </div>
+              </div>
+              {% endif %}
+              {% if success %}
+              <div class="row">
+                <div class="col">
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                      {{ success }}
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                </div>
+              </div>
+              {% endif %}
+              {% if info %}
+              <div class="row">
+                <div class="col">
+                    <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                      {{ info }}
+                      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                </div>
+              </div>
+              {% endif %}
+              <div class="row">
+                <div class="col" id="hx_content">
                 {% block content %} {% endblock %}
+                </div>
+              </div>
             </main>
         </div>
     </div>
