--- a/sip_pdb/templates/registrant/layout.jinja
+++ b/sip_pdb/templates/registrant/layout.jinja
@@ -88,21 +88,21 @@
                           <a class="nav-link"
                             hx-get="{{ url_for('registrant.isi_data') }}"
                           >
-                            <span class="ml-2">Isi Data</span>
+                            <span class="ml-2">Data Pendaftar</span>
                           </a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link"
                             hx-get="{{ url_for('registrant.isi_wali') }}"
                           >
-                            <span class="ml-2">Isi Wali</span>
+                            <span class="ml-2">Data Ayah</span>
                           </a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link"
                             hx-get="{{ url_for('registrant.isi_pernyataan') }}"
                           >
-                            <span class="ml-2">Isi Pernyataan</span>
+                            <span class="ml-2">Surat Pernyataan</span>
                           </a>
                         </li>
                         <li class="nav-item">
