isi data ortu, tahap 1

--- a/sip_pdb/templates/registrant/layout.jinja
+++ b/sip_pdb/templates/registrant/layout.jinja
@@ -93,7 +93,7 @@
                         </li>
                         <li class="nav-item">
                           <a class="nav-link"
-                            hx-get="{{ url_for('registrant.isi_wali') }}"
+                            hx-get="{{ url_for('registrant.isi_ortu', tipe='ayah') }}"
                           >
                             <span class="ml-2">Data Ayah</span>
                           </a>
