--- a/sip_pdb/templates/registrant/beranda.jinja
+++ b/sip_pdb/templates/registrant/beranda.jinja
@@ -5,7 +5,12 @@
     <title>Beranda</title>
 {% endif %}
 
+{% from 'macros.jinja' import render_notif %}
+
 {% block content %}
+
+{{ render_notif(error, success, info) }}
+
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item active">Beranda</li>
