--- a/sip_pdb/templates/registrant/isi_ortu.jinja
+++ b/sip_pdb/templates/registrant/isi_ortu.jinja
@@ -5,9 +5,12 @@
     <title>Isi Data {{ tipe.title() }} </title>
 {% endif %}
 
-{% from 'macros.jinja' import render_field, render_select %}
+{% from 'macros.jinja' import render_field, render_notif %}
 
 {% block content %}
+
+{{ render_notif(error, success, info) }}
+
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ url_for('registrant.beranda') }}">Beranda</a></li>
