--- a/sip_pdb/templates/registrant/layout.jinja
+++ b/sip_pdb/templates/registrant/layout.jinja
@@ -100,6 +100,13 @@
                         </li>
                         <li class="nav-item">
                           <a class="nav-link"
+                            hx-get="{{ url_for('registrant.isi_ortu', tipe='ibu') }}"
+                          >
+                            <span class="ml-2">Data Ibu</span>
+                          </a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link"
                             hx-get="{{ url_for('registrant.isi_pernyataan') }}"
                           >
                             <span class="ml-2">Surat Pernyataan</span>
