--- a/sip_pdb/templates/registrant/isi_data.jinja
+++ b/sip_pdb/templates/registrant/isi_data.jinja
@@ -47,7 +47,7 @@
                 <li class="list-group-item" id="img_content" hx-boost="false">
                 {% if photo_uploaded %}
                 STATUS: sudah upload. 
-                <a class="btn btn-info btn-sm" target="_blank" href="{{ url_for('registrant.get_foto') }}">Lihat Foto</a>
+                <a class="btn btn-info btn-sm" target="_blank" href="{{ url_for('registrant.get_foto', tipe='foto') }}">Lihat Foto</a>
                 {% else %} STATUS: Belum Upload {% endif %}
                 </li>
             </ul>
