--- a/sip_pdb/templates/registrant/beranda.jinja
+++ b/sip_pdb/templates/registrant/beranda.jinja
@@ -75,6 +75,10 @@
                     <input type="number" name="jumlah" class="form-control">
                 </div>
                 <div class="mb-3">
+                    <label class="form-label">Tanggal Pembayaran</label>
+                    <input type="date" name="tgl_bayar" class="form-control">
+                </div>
+                <div class="mb-3">
                     <label class="form-label">Upload Kwitansi</label>
                     <input type="file" name="file" class="form-control">
                 </div>
