--- a/sip_pdb/templates/registrant/rekap.jinja
+++ b/sip_pdb/templates/registrant/rekap.jinja
@@ -50,6 +50,7 @@
          <tr>
             <td></td><td>&nbsp;</td><td></td>
         </tr>
+        {%if rgd %}
         <tr>
             <td>No. Induk Keluarga</td><td>&nbsp;:&nbsp;<td>{{rgd.nik}}</td>
         </tr>
@@ -97,6 +98,7 @@
             <td>Agama</td><td>&nbsp;:&nbsp;<td>{{rgd.religion}}</td>
         </tr>
         <!-- hobi dkk masih todo -->
+        {% endif %}
         </table>
     </div>
 </div>
@@ -204,6 +206,17 @@
 <div class="row">
     <div class="<col>">
         <hr />
+    </div>
+</div>
+<div class="row">
+    <div class="<col>">
+        {% if rg.finalized %}
+        <p>Jika ternyata masih terdapat kesalahan data setelah finalisasi, silahkan hubungi panitia.</p>
+        {% elif rgd and pd.Ayah and pd.Ibu  %}
+        <a href="{{ url_for('registrant.finalisasi')}}" class="btn btn-warning text-decoration-none" role="button">
+            Finalisasi
+        </a>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
