tambah hobi, riwayat kesehatan, kelainan jasmani

--- a/sip_pdb/templates/registrant/isi_data.jinja
+++ b/sip_pdb/templates/registrant/isi_data.jinja
@@ -111,6 +111,10 @@
         {{ render_field(form.height) }}
         {{ render_field(form.weight) }}
         {{ render_field(form.head_size) }}
+        <!-- TODO: Kasih keterangan, pisahkan dengan koma. boostrap form help? -->
+        {{ render_field(form.hobbies) }}
+        {{ render_field(form.hospital_sheets) }}
+        {{ render_field(form.physical_abnormalities) }}
         <!-- TODO: hobi, prestasi, catatan kesihatan, kelainan jasmani dibuat seperti ppdb lama! -->
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
